--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Orion App!</title>
   </head>
   <body>
-    <h1>The app has deploy correctly..... write msg</h1>
+    <h1>The app has deploy correctly.....modify your env vars to show your app</h1>
   </body>
 </html>
