--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Orion App!</title>
   </head>
   <body>
-    <h1>The app has deploy correctly.....modify your env vars to show your app</h1>
+    <img src="https://orion.hosting/images/svg/hosting.svg" width="150px"/>
+    <h1>The app has deployed correctly!</h1>
+    <h2>To display your app, set your environment variables</h2>
+
   </body>
 </html>
